2004-02-21  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/quote.ly: new file.

	* lily/sequential-iterator.cc (process): only process if moment >= 0.

	* lily/parser.yy (command_element): \quote DURATION NAME: support
	cue notes. 

	* lily/quote-iterator.cc (class Quote_iterator): new file.

2004-02-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/auto-beam-engraver.cc (try_music): accept and process
	beam-forbid-event.

	* input/regression/auto-beam-no-beam.ly: new file.

2004-02-20  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/accidental.cc (print): Change font-relative-size ->
	font-size. Fixes cautionary-style = smaller.

2004-02-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/system-start-delimiter.cc (staff_brace): remove
	font-relative-size

	* lily/parser.yy (music_property_def): oops. SCM_UNDEFINED
	forgotten with scm_list_n. Fixes spurious coredumps.

	* lily/accidental-engraver.cc (stop_translation_timestep): move
	update of localKeySignature to stop_translation_timestep (). This
	makes sure that all ties are noticed at the right moment.
	(stop_translation_timestep): clear tie only when right-side
	notehead was seen.
	(number_accidentals_from_sig): cleanup. 

	* input/regression/accidental-tie.ly (mus): new file

	* input/regression/tie-accidental, tie-break-accidental.ly: remove
	these longish tests.

2004-02-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/*.hh (class Item): rename XXX_b () to is_XXX ().

	* THANKS: update bugreporter list.

	* lily/beam.cc (print): broken beams last until end of staff.
	(print): broken beams start from prefatory matter.

	* scm/output-tex.scm (output-scopes): don't dump fraction exactly.

	* lily/paper-score.cc (process): dump header only once.

	* lily/paper-outputter.cc (Paper_outputter): move logic into
	Scheme.

	* scm/output-tex.scm (output-scopes): new function.
	(output-paper-def): new function
	(tex-string-def): new function
	(symbol->tex-key): new function
