@@ -1,5 +1,8 @@
 2004-02-21  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/parser.yy (command_element): extract quoted vector in
+	parser.
+
 	* input/regression/quote.ly: new file.
 
 	* lily/sequential-iterator.cc (process): only process if moment >= 0.
